--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -5,8 +5,8 @@ readme = "README.md"
 authors = [
     {name = "Jonathan Moss", email = "jonathan@miss-scarlet.house"}
 ]
-version = "0.1.0"
-requires-python = ">=3.12,<4"
+version = "0"
+requires-python = ">=3.13,<4"
 
 dependencies = [
     "django >= 5.1.5, < 6",
@@ -14,7 +14,7 @@ dependencies = [
     "psycopg [binary, pool] >= 3.2.0, < 4.0.0",
     "uvicorn >= 0.34.0, < 1.0",
     "uvloop  >= 0.21.0, < 1.0.0; sys_platform != 'win32'",
-    "sentry-sdk >= 2.20.0, < 3.0",
+    "sentry-sdk >= 2.22.0, < 3.0",
     "httptools >= 0.6.4, < 1.0"
 ]
 
@@ -29,30 +29,21 @@ packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]
 poetry-plugin-export = ">=1.9.0"
 
 [tool.poetry.group.dev.dependencies]
-bandit = "^1.8.0"
-black = "^24.10.0"
-django-stubs = "^5.1.0"
+django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
 factory-boy = "^3.3.0"
-flake8 = "^7.1.0"
-flake8-bandit = "^4.1.1"
-flake8-black = "^0.3.6"
-flake8-bugbear = "^24.12.0"
-flake8-builtins = "^2.5.0"
-flake8-isort = "^6.1.0"
 invoke = "^2.2.0"
-ipython = "^8.31.0"
-isort = "^5.13.0"
+ipython = "^8.32.0"
 mkdocs = "^1.6.0"
-mkdocs-material = "^9.5.0"
-mkdocstrings = "^0.27.0"
-mypy = { extras = ["mypyc"], version = "^1.14.0" }
-poetry = "^1.8.0"
+mkdocs-material = "^9.6.5"
+mkdocstrings = "^0.28.0"
+mypy = { extras = ["mypyc"], version = "^1.15.0" }
 pudb = "^2024.1.0"
 pytest = "^8.3.0"
 pytest-cov = "^6.0.0"
-pytest-django = "^4.9.0"
-pytest-playwright = "^0.6.0"
+pytest-django = "^4.10.0"
+pytest-playwright = "^0.7.0"
 pytest-spec = "^4.0.0"
+ruff = "^0.9.8"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -68,9 +59,6 @@ module = "environ"
 
 [tool.django-stubs]
 django_settings_module = "{{ cookiecutter.project_slug }}.main.settings"
-
-[tool.isort]
-profile = "black"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.main.settings"
@@ -92,3 +80,21 @@ filterwarnings = """
 
 [tool.coverage.run]
 omit = ["**/migrations/*"]
+
+[tool.ruff.lint]
+select = [
+    "A",  # flake8-builtins
+    "B0", # flake8-bugbear (not opinionated)
+    "E", # pycodestyle (errors)
+    "F", # pyflake
+    "W", # pycodestyle (warnings)
+    "S", # flake8-bandit
+    "I", # isort
+    "C90"  # mccabe
+]
+
+[tool.ruff.lint.per-file-ignores]
+"src/tests/*" = ["S101"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 15
