Updating CI to use cookiecutter

--- a/.github/workflows/startproject.yml
+++ b/.github/workflows/startproject.yml
@@ -17,7 +17,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:16
+        image: postgres:17
         env:
           POSTGRES_USER: dev
           POSTGRES_PASSWORD: dev_password
@@ -38,7 +38,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.13"
 
       - name: Install Dependencies
         run: |
@@ -51,14 +51,17 @@ jobs:
             libpq-dev
 
           # Base Python tooling
-          pip install invoke poetry django
+          pip install invoke poetry cookiecutter
 
       - name: Create test project
         run: |
-          django-admin startproject \
-            --template template/ \
-            --extension py,Dockerfile,env,toml,yml \
-            test_project
+          touch config.yaml
+          echo "default_config:" >> config.yaml
+          echo "  project_name: "Test Project" >> config.yaml
+          echo "  project_slug: "test_project" >> config.yaml
+          echo "  author_name: "Github Action" >> config.yaml
+          echo "  author_email: "ga@example.com" >> config.yaml
+          cookiecutter --config-file config.yaml
 
       - name: Install test project
         run: |
