Removed main package
That stuff can just sit in the root of the package, there is no real
reason to have it in a sub-package.

--- a/{{ cookiecutter.project_slug }}/mkdocs.yml
+++ b/{{ cookiecutter.project_slug }}/mkdocs.yml
@@ -37,6 +37,6 @@ plugins:
           setup_commands:
             - import os, sys
             - sys.path.append("src")
-            - os.environ["DJANGO_SETTINGS_MODULE"] = "{{ cookiecutter.project_slug }}.main.settings"
+            - os.environ["DJANGO_SETTINGS_MODULE"] = "{{ cookiecutter.project_slug }}.settings"
   - tags:
       tags_file: tags.md
