--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -21,33 +21,39 @@ dependencies = [
 [project.scripts]
 manage = "{{ cookiecutter.project_slug }}.manage:main"
 
-[tool.poetry]
-requires-poetry = ">=2.0"
-packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]
+[dependency-groups]
+dev = [
+    "django-stubs[compatible-mypy]>=5.1.3,<6",
+    "factory-boy>=3.3.0,<4",
+    "invoke>=2.2.0,<3",
+    "ipython>=8.32.0,<9",
+    "mkdocs>=1.6.0,<2",
+    "mkdocs-material>=9.6.5",
+    "mkdocstrings[python]>=0.28.0",
+    "mypy[mypyc]>=1.15.0,<2",
+    "pudb>=2024.1.0,<2025",
+    "pytest>=8.3.0,<9",
+    "pytest-cov>=6.0.0,<7",
+    "pytest-django>=4.10.0,<5",
+    "pytest-playwright>=0.7.0,<0.8",
+    "pytest-spec>=4.0.0,<5",
+    "ruff>=0.9.8,<0.10",
+]
 
-[tool.poetry.requires-plugins]
-poetry-plugin-freeze = ">=1.2.0"
 
-[tool.poetry.group.dev.dependencies]
-django-stubs = {extras = ["compatible-mypy"], version = "^5.1.3"}
-factory-boy = "^3.3.0"
-invoke = "^2.2.0"
-ipython = "^8.32.0"
-mkdocs = "^1.6.0"
-mkdocs-material = "^9.6.5"
-mkdocstrings = "^0.28.0"
-mypy = { extras = ["mypyc"], version = "^1.15.0" }
-pudb = "^2024.1.0"
-pytest = "^8.3.0"
-pytest-cov = "^6.0.0"
-pytest-django = "^4.10.0"
-pytest-playwright = "^0.7.0"
-pytest-spec = "^4.0.0"
-ruff = "^0.9.8"
+[tool.hatch.build.targets.sdist]
+include = ["src/{{ cookiecutter.project_slug }}"]
+
+[tool.hatch.build.targets.wheel]
+include = ["src/{{ cookiecutter.project_slug }}"]
+
+[tool.hatch.build.targets.wheel.sources]
+"src/{{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}"
 
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 
 [tool.mypy]
 strict = true
